<resources>
    <string name="app_name">Tu Voto Cuenta</string>
    <string name="title_activity_dashboard">Tu Voto Cuenta</string>
    <string name="title_home">Inicio</string>
    <string name="title_favs">Favourites</string>
    <string name="title_mylist">My Properties</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>


    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="userId">userId</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Full Name</string>
    <string name="tvGoSignUp">Don\'t have an account?</string>

    <string-array name="provincias">
        <item>Albacete</item>
        <item>Álava</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ceuta</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Gerona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Guipúzcoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Islas Baleares</item>
        <item>Jaén</item>
        <item>La Coruña</item>
        <item>La Rioja</item>
        <item>Las Palmas de Gran Canaria</item>
        <item>Lérida</item>
        <item>León</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Melilla</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Orense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>

    <string name="title_favoritos">Favoritos</string>
    <string name="title_mis_propuestas">Mis Propuestas</string>
    <string name="title_mi_perfil">Mi Perfil</string>

    <!-- Propuestas -->
    <string name="titulo_propuesta">Título</string>
    <string name="materia_propuesta">Materia</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="contenido_propuesta">Contenido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Perfil-->
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_email">Email</string>
    <string name="perfil_ciudad">Ciudad</string>
    <string name="perfil_partido">Partido</string>

    <string name="password_edit">Introduce tu nueva contraseña</string>
    <string name="from_gallery">Galería</string>
    <string name="from_camera">Cámara</string>
    <string name="choose_option">Elija desde donde quiere subir la foto:</string>
    <string name="cancel">Cancelar</string>

    <string name="title_borrar">¡Atención!</string>
    <string name="message_delete">Esta acción es irreversible, ¿desea continuar?</string>
    <string name="title_activity_maps">Map</string>
</resources>
